--- a/com.unity.render-pipelines.high-definition/Editor/Material/Fabric/ShaderGraph/FabricRaytracingPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Fabric/ShaderGraph/FabricRaytracingPass.template
@@ -46,7 +46,7 @@ Pass
     $splice(GraphDefines)
 
     // Includes
-    $splice(PassIncludes)
+    $splice(PreGraphIncludes)
 
     // --------------------------------------------------
     // Structs and Packing
@@ -253,7 +253,7 @@ Pass
     // --------------------------------------------------
     // Main
 
-    $splice(MainInclude)
+    $splice(PostGraphIncludes)
 
     ENDHLSL
 }
