--- a/TestProjects/UniversalGraphicsTest/Packages/manifest.json
+++ b/TestProjects/UniversalGraphicsTest/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "disableProjectUpdate": true,
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "2.0.8",
@@ -14,7 +15,7 @@
     "com.unity.render-pipelines.core": "file:../../../com.unity.render-pipelines.core",
     "com.unity.render-pipelines.universal": "file:../../../com.unity.render-pipelines.universal",
     "com.unity.shadergraph": "file:../../../com.unity.shadergraph",
-    "com.unity.test-framework": "1.1.2",
+    "com.unity.test-framework": "1.1.1",
     "com.unity.testframework.graphics": "file:../../../com.unity.testframework.graphics",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.2",
