--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ ShaderGraph/DebugOutput/**
 ShaderGraph/Testing/IntegrationTests/.Failed
 TestProjects/*/ProjectSettings/ProjectVersion.txt
 
+manifest.json
