--- a/.yamato/upm-ci-hdrp.yml
+++ b/.yamato/upm-ci-hdrp.yml
@@ -25,6 +25,8 @@ win_apis:
     cmd: -force-d3d11
   - name: Vulkan
     cmd: -force-vulkan
+  - name: DX12
+    cmd: -force-d3d12
 mac_apis:
   - name: metal
   - name: openglcore
