--- a/.yamato/upm-ci-vfx_lwrp.yml
+++ b/.yamato/upm-ci-vfx_lwrp.yml
@@ -28,6 +28,8 @@ win_apis:
     cmd: -force-d3d11
   - name: Vulkan
     cmd: -force-vulkan
+  - name: DX12
+    cmd: -force-d3d12
 linux_apis:
   - name: OpenGLCore
     cmd: -force-glcore
