--- a/TestProjects/UniversalGraphicsTest/Packages/manifest.json
+++ b/TestProjects/UniversalGraphicsTest/Packages/manifest.json
@@ -1,5 +1,4 @@
 {
-  "disableProjectUpdate": true,
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
@@ -19,6 +18,7 @@
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.2",
     "com.unity.ugui": "1.0.0",
+	"com.unity.xr.legacyinputhelpers": "2.0.6",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
