--- a/.yamato/upm-ci-universal.yml
+++ b/.yamato/upm-ci-universal.yml
@@ -1,5 +1,6 @@
 editors:
   - version: trunk
+  - version: CUSTOM REVISION
 platforms:
   - name: Windows64
     type: Unity::VM::GPU
@@ -40,19 +41,37 @@ linux_apis:
 {% for project in projects %}
 {% for editor in editors %}
 
+{% if editor.version == 'CUSTOM REVISION' %}
+{% assign with_custom_revision = true %}
+{% assign versionid = 'customrev' %}
+{% assign version_name = 'custom revision' %}
+{% assign downloader_arg_posix = '-r $CUSTOM_REVISION' %}
+{% assign downloader_arg_win = '-r %CUSTOM_REVISION%' %}
+{% else %}
+{% assign with_custom_revision = false %}
+{% assign versionid = editor.version %}
+{% assign version_name = 'version ' | append:editor.version %}
+{% assign downloader_arg_posix = '-b ' | append:editor.version %}
+{% assign downloader_arg_win = downloader_arg_posix %}
+{% endif %}
+
 {% for testplatform in testplatforms %}
-{{ project.name }}_OSX_OpenGLCore_{{ testplatform.name }}_{{ editor.version }}:
-  name : Build and Test {{ project.name }} on OSX_OpenGLCore_{{ testplatform.name }} on version {{ editor.version }}
+{{ project.name }}_OSX_OpenGLCore_{{ testplatform.name }}_{{versionid}}:
+  name : Build and Test {{ project.name }} on OSX_OpenGLCore_{{ testplatform.name }} on {{ version_name }}
   agent:
     type: Unity::VM::osx
     image: buildfarm/mac:stable
     flavor: m1.mac
+{% if with_custom_revision %}
+  variables:
+    CUSTOM_REVISION: custom_revision_not_set
+{% endif %}
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
-    - cd TestProjects/{{ project.folder }} && unity-downloader-cli -b {{ editor.version }} -c editor --wait --published
-    
+    - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{downloader_arg_posix}} -c editor --wait --published
+
     {% if testplatform.name == "Standalone" %}
     - cd TestProjects/{{ project.folder }} && utr/utr {{ testplatform.args }}OSX --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200
     {% else %}
@@ -65,22 +84,25 @@ linux_apis:
 {% endfor %}
 {% for testplatform in testplatforms %}
 {% for win_api in win_apis %}
-{{ project.name }}_Windows64_{{ testplatform.name }}_{{ win_api.name }}_{{ editor.version }}:
-  name : Build and Test {{ project.name }} on Windows64_{{ testplatform.name }}_{{ win_api.name }} on version {{ editor.version }}
+{{ project.name }}_Windows64_{{ testplatform.name }}_{{ win_api.name }}_{{versionid}}:
+  name : Build and Test {{ project.name }} on Windows64_{{ testplatform.name }}_{{ win_api.name }} on {{ version_name }}
   agent:
     {% if testplatform.name == "editmode" %}
     type: Unity::VM
     {% else %}
     type: Unity::VM::GPU
-    {% endif %} 
-    image: sdet/gamecode_win10:stable      
+    {% endif %}
+    image: sdet/gamecode_win10:stable
     flavor: b1.large
+{% if with_custom_revision %}
+  variables:
+    CUSTOM_REVISION: custom_revision_not_set
+{% endif %}
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
-    - cd TestProjects/{{ project.folder }} && unity-downloader-cli -b {{ editor.version }} -c editor --wait --published    
-
+    - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{downloader_arg_win}} -c editor --wait --published
     {% if testplatform.name == "Standalone" %}
     - cd TestProjects/{{ project.folder }} && powershell -command "utr/utr {{ testplatform.args }}Windows64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildWindows{{ win_api.name }}Linear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200"
     {% else %}
@@ -90,7 +112,7 @@ linux_apis:
     logs:
       paths:
         - "**/test-results/**"
-{% endfor %}    
+{% endfor %}
 {% endfor %}
 
 
@@ -98,19 +120,23 @@ linux_apis:
 {% if testplatform.name == "editmode" %}
 #skip because we don't need a GPU to run editmode tests
 {% else %}
-{{ project.name }}_OSX_Metal_{{ testplatform.name }}_{{ editor.version }}:
-  name : Build and Test {{ project.name }} on OSX_Metal_{{ testplatform.name }} on version {{ editor.version }}
+{{ project.name }}_OSX_Metal_{{ testplatform.name }}_{{versionid}}:
+  name : Build and Test {{ project.name }} on OSX_Metal_{{ testplatform.name }} on {{ version_name }}
   agent:
     type: Unity::metal::macmini
     image: slough-ops/macos-10.14-xcode
     flavor: m1.mac
+{% if with_custom_revision %}
+  variables:
+    CUSTOM_REVISION: custom_revision_not_set
+{% endif %}
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
-    
+
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP "bash -lc 'pip3 install --user unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple'"
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" -r ../ScriptableRenderPipeline/ bokken@$BOKKEN_DEVICE_IP:~/ScriptableRenderPipeline
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP:~/.ssh/id_rsa_macmini
-    - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP '/Users/bokken/Library/Python/3.7/bin/unity-downloader-cli -u {{ editor.version }} -c editor --wait --published'
+    - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP '/Users/bokken/Library/Python/3.7/bin/unity-downloader-cli {{ downloader_arg_posix }} -c editor --wait --published'
     {% if testplatform.name == "Standalone" %}
     - |
       ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }}OSX  --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results --timeout=1200'
@@ -133,22 +159,26 @@ linux_apis:
 {% for testplatform in testplatforms %}
 {% for linux_api in linux_apis %}
 # Separate block for linux, because the linux agents currently need extra configuration
-{{ project.name }}_Linux_{{ testplatform.name }}_{{ linux_api.name }}_{{ editor.version }}:
-  name : Build and Test {{ project.name }} on Linux_{{ testplatform.name }}_{{ linux_api.name }} on version {{ editor.version }}
+{{ project.name }}_Linux_{{ testplatform.name }}_{{ linux_api.name }}_{{versionid}}:
+  name : Build and Test {{ project.name }} on Linux_{{ testplatform.name }}_{{ linux_api.name }} on {{ version_name }}
   agent:
     {% if testplatform.name == "editmode" %}
     type: Unity::VM
     {% else %}
     type: Unity::VM::GPU
-    {% endif %} 
+    {% endif %}
     image: cds-ops/ubuntu-18.04-base:latest
     flavor: b1.large
+{% if with_custom_revision %}
+  variables:
+    CUSTOM_REVISION: custom_revision_not_set
+{% endif %}
   commands:
     - sudo -H pip install --upgrade pip
     - sudo -H pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
     - sudo npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
-    - cd TestProjects/{{ project.folder }} && sudo unity-downloader-cli -b {{ editor.version }} -c editor --wait --published
+    - cd TestProjects/{{ project.folder }} && sudo unity-downloader-cli {{downloader_arg_posix}} -c editor --wait --published
     {% if testplatform.name == "Standalone" %}
     - cd TestProjects/{{ project.folder }} && DISPLAY=:0.0 utr/utr {{ testplatform.args }}Linux64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildLinux{{ linux_api.name }}Linear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
     {% else %}
@@ -168,34 +198,38 @@ All_{{ project.name }}:
     type: Unity::VM
     image: cds-ops/ubuntu-18.04-agent:latest
     flavor: b1.small
+{% if with_custom_revision %}
+  variables:
+    CUSTOM_REVISION: custom_revision_not_set
+{% endif %}
   commands:
     - dir
   dependencies:
   {% for platform in platforms %}
   {% for testplatform in testplatforms %}
   {% if platform.name == "OSX_OpenGLCore" %}
-  
+
   {% if testplatform.name == "editmode" %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{versionid}}
   {% endif %}
-  
+
   {% elsif platform.name == "OSX_Metal"  and testplatform.name == "editmode" %}
-  
+
   {% elsif platform.name == "Windows64" %}
   {% for win_api in win_apis %}
   {% if win_api.name == "Vulkan" %}
   #skip
   {% else %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ win_api.name }}_{{ editor.version }}
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ win_api.name }}_{{versionid}}
   {% endif %}
   {% endfor %}
 
   {% else %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}  
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{versionid}}
   {% endif %}
-    
+
   {% endfor %}
   {% endfor %}
 
-{% endfor %}    
+{% endfor %}
 {% endfor %}
