removing mac package test dependency until katana is fixed

--- a/.yamato/upm-ci-packages.yml
+++ b/.yamato/upm-ci-packages.yml
@@ -43,13 +43,13 @@ platforms:
         flavor: b1.large
       copycmd: copy upm-ci~\packages\*.tgz .Editor\Data\Resources\PackageManager\Editor
       editorpath: .\.Editor
-    - name: mac
-      agent:
-        type: Unity::VM::osx
-        image: buildfarm/mac:stable
-        flavor: m1.mac
-      copycmd: cp ./upm-ci~/packages/*.tgz ./.Editor/Unity.app/Contents/Resources/PackageManager/Editor
-      editorpath: "$(pwd)/.Editor/Unity.app/Contents/MacOS/Unity"
+    # - name: mac
+      # agent:
+        # type: Unity::VM::osx
+        # image: buildfarm/mac:stable
+        # flavor: m1.mac
+      # copycmd: cp ./upm-ci~/packages/*.tgz ./.Editor/Unity.app/Contents/Resources/PackageManager/Editor
+      # editorpath: "$(pwd)/.Editor/Unity.app/Contents/MacOS/Unity"
 ---
 {% for package in packages %}
 pack_{{ package.id }}:
