Added a python Standalone run file, along with a C# scene iterator script to be looped by the python to break up the scenes before iterative runs

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@
 *.sublime-project
 *.sublime-workspace
 *.suo
+*.swp
 *.userprefs
 .npmrc
 .Editor
@@ -37,3 +38,9 @@ ShaderGraph/DebugOutput/**
 ShaderGraph/Testing/IntegrationTests/.Failed
 TestProjects/*/ProjectSettings/ProjectVersion.txt
 
+CurTestState.txt
+SetupLog.txt
+TestsDone.txt
+tempSceneStorage.txt
+upm-ci~/*
+utr/*
