--- a/.yamato/upm-ci-hdrp_standalone.yml
+++ b/.yamato/upm-ci-hdrp_standalone.yml
@@ -1,5 +1,5 @@
 editors:
-  - version: trunk
+  - version: draft/graphics/texture-gpu-pruning
 platforms:
   - name: Windows64
     type: Unity::VM::GPU
