--- a/.yamato/upm-ci-hdrp_standalone.yml
+++ b/.yamato/upm-ci-hdrp_standalone.yml
@@ -23,6 +23,11 @@ win_apis:
 mac_apis:
   - name: metal
   - name: openglcore
+linux_apis:
+  - name: OpenGLCore
+    cmd: -force-glcore
+  - name: Vulkan
+    cmd: -force-vulkan
 ---
 {% for project in projects %}
 {% for editor in editors %}
@@ -78,7 +83,7 @@ mac_apis:
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP '/Users/bokken/Library/Python/3.7/bin/unity-downloader-cli -u {{ editor.version }} -c editor --wait --published'
     {% if testplatform.name == "Standalone" %}
     - |
-      ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }}OSX  --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results --timeout=1200'
+      ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }}OSX --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildMacOSMetalLinear"  --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results --timeout=1200'
     {% else %}
     - |
       ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }} --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results'
@@ -95,6 +100,36 @@ mac_apis:
 {% endif %}
 {% endfor %}
 
+{% for testplatform in testplatforms %}
+{% for linux_api in linux_apis %}
+# Separate block for linux, because the linux agents currently need extra configuration
+{{ project.name }}_Linux_{{ testplatform.name }}_{{ linux_api.name }}_{{ editor.version }}:
+  name : Build and Test {{ project.name }} on Linux_{{ testplatform.name }}_{{ linux_api.name }} on version {{ editor.version }}
+  agent:
+    {% if testplatform.name == "editmode" %}
+    type: Unity::VM
+    {% else %}
+    type: Unity::VM::GPU
+    {% endif %} 
+    image: cds-ops/ubuntu-18.04-base:latest
+    flavor: b1.large
+  commands:
+    - sudo -H pip install --upgrade pip
+    - sudo -H pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
+    - sudo npm install upm-ci-utils@stable -g --registry https://api.bintray.com/npm/unity/unity-npm
+    - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
+    - cd TestProjects/{{ project.folder }} && sudo unity-downloader-cli -b {{ editor.version }} -c editor --wait --published
+    {% if testplatform.name == "Standalone" %}
+    - cd TestProjects/{{ project.folder }} && DISPLAY=:0.0 utr/utr {{ testplatform.args }}Linux64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildLinux{{ linux_api.name }}Linear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
+    {% else %}
+    - cd TestProjects/{{ project.folder }} && DISPLAY=:0.0 utr/utr --extra-editor-arg="{{ linux_api.cmd }}"  {{ testplatform.args }} --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
+    {% endif %}
+  artifacts:
+    logs:
+      paths:
+        - "**/test-results/**/*"  
+{% endfor %}   
+{% endfor %}
 
 All_{{ project.name }}:
   name: All {{ project.name }} CI
