Fix zfight with deferred depth prepass and lit quad in HDRP

--- a/com.unity.render-pipelines.high-definition/Editor/VFXGraph/Shaders/Templates/Mesh/PassForward.template
+++ b/com.unity.render-pipelines.high-definition/Editor/VFXGraph/Shaders/Templates/Mesh/PassForward.template
@@ -60,7 +60,7 @@ Pass
 		float4 cPosNonJiterred : TEXCOORD7;
 		#endif
 
-		float3 posWS : TEXCOORD8;
+		float3 posWS : TEXCOORD8; // Needed for fog
         
         ${VFXAdditionalInterpolantsDeclaration}
 		
