--- a/com.unity.render-pipelines.high-definition/Editor/VFXGraph/Shaders/Templates/PlanarPrimitive/PassDepthOrMV.template
+++ b/com.unity.render-pipelines.high-definition/Editor/VFXGraph/Shaders/Templates/PlanarPrimitive/PassDepthOrMV.template
@@ -2,6 +2,9 @@
 #define UNITY_MATERIAL_LIT
 #pragma multi_compile _ WRITE_NORMAL_BUFFER
 
+#define NEEDS_NORMAL	defined(WRITE_NORMAL_BUFFER) || FORCE_NORMAL_VARYING || SHADERGRAPH_HAS_NORMAL // TODO Should extract mv pass
+#define NEEDS_TANGENT	USE_NORMAL_MAP || USE_NORMAL_BENDING || SHADERGRAPH_NEEDS_TANGENT_DEPTH || SHADERGRAPH_HAS_NORMAL
+
 struct ps_input
 {
 	float4 pos : SV_POSITION;
@@ -24,14 +27,14 @@ struct ps_input
 	VFX_OPTIONAL_INTERPOLATION float2 builtInInterpolants2 : TEXCOORD2;
 	#endif
 	
-	#ifdef WRITE_NORMAL_BUFFER
+	#if NEEDS_NORMAL
 	float4 normal : TEXCOORD3; // normal scale is stored in w
-	#if USE_NORMAL_MAP || USE_NORMAL_BENDING || SHADERGRAPH_NEEDS_TANGENT_DEPTH || SHADERGRAPH_HAS_NORMAL
+	#endif
+	#if NEEDS_TANGENT
 	float3 tangent : TEXCOORD4;
 	#endif
 	#if USE_NORMAL_BENDING
 	float2 bentFactors : TEXCOORD5;
-	#endif
 	#endif
 	
 	#if VFX_PASSDEPTH == VFX_PASSDEPTH_MOTION_VECTOR
@@ -40,7 +43,7 @@ struct ps_input
 	#endif
     
     ${VFXAdditionalInterpolantsDeclaration}
-	
+
 	UNITY_VERTEX_OUTPUT_STEREO
 };
 
@@ -52,16 +55,20 @@ struct ps_input
 #define VFX_VARYING_MOTIONVECTORSCALE builtInInterpolants2.xy
 #define VFX_VARYING_UV uv
 
-#ifdef WRITE_NORMAL_BUFFER
+#if NEEDS_NORMAL
 #define VFX_VARYING_NORMAL normal.xyz
+#endif
+#ifdef WRITE_NORMAL_BUFFER
 #define VFX_VARYING_SMOOTHNESS builtInInterpolants.w
-#if USE_NORMAL_MAP || SHADERGRAPH_HAS_NORMAL
+#endif
+#if NEEDS_TANGENT
 #define VFX_VARYING_TANGENT tangent
+#endif
+#if USE_NORMAL_MAP
 #define VFX_VARYING_NORMALSCALE normal.w
 #endif
 #if USE_NORMAL_BENDING
 #define VFX_VARYING_BENTFACTORS bentFactors
-#endif
 #endif
 
 #if VFX_PASSDEPTH == VFX_PASSDEPTH_MOTION_VECTOR
