--- a/.yamato/upm-ci-hdrp_standalone.yml
+++ b/.yamato/upm-ci-hdrp_standalone.yml
@@ -12,6 +12,10 @@ platforms:
     type: Unity::metal::macmini
     image: slough-ops/macos-10.14-xcode
     flavor: m1.mac
+  - name: Linux_Vulkan
+    type: Unity::VM::GPU
+    image: cds-ops/ubuntu-18.04-base:latest
+    flavor: b1.large
 testplatforms:
   - name: Standalone
     args: --suite=playmode --platform=Standalone
@@ -26,28 +30,17 @@ win_apis:
 mac_apis:
   - name: metal
   - name: openglcore
-linux_apis:
-  - name: OpenGLCore
-    cmd: -force-glcore
-  - name: Vulkan
-    cmd: -force-vulkan
 ---
 {% for project in projects %}
 {% for editor in editors %}
 {% for platform in platforms %}
-
 {% if platform.name == "Windows64" %}
-
 {% for testplatform in testplatforms %}
 {% for win_api in win_apis %}
 {{ project.name }}_Windows64_{{ win_api.name }}_{{ testplatform.name }}_{{ editor.version }}:
   name : {{ project.name }} on Windows64_{{ win_api.name }}_{{ testplatform.name }} on version {{ editor.version }}
   agent:
-    {% if testplatform.name == "editmode" %}
-    type: Unity::VM
-    {% else %}
     type: {{ platform.type }}
-    {% endif %} 
     image: {{ platform.image }}      
     flavor: {{ platform.flavor }}
   commands:
@@ -55,25 +48,16 @@ linux_apis:
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
     - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmd }} -c editor --wait --published    
-
-    {% if testplatform.name == "Standalone" %}
     - cd TestProjects/{{ project.folder }} && utr\utr {{ testplatform.args }}Windows64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildWindows{{ win_api.name }}Linear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200
-    {% else %}
-    - cd TestProjects/{{ project.folder }} && utr\utr {{ testplatform.args }} --extra-editor-arg="{{ win_api.cmd }}" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
-    {% endif %}
+
   artifacts:
     logs:
       paths:
         - "**/test-results/**"
 {% endfor %}    
 {% endfor %}
-
 {% elsif platform.name == "OSX_Metal" %}
-
 {% for testplatform in testplatforms %}
-{% if testplatform.name == "editmode" %}
-#skip because we don't need a GPU to run editmode tests
-{% else %}
 {{ project.name }}_OSX_Metal_{{ testplatform.name }}_{{ editor.version }}:
   name : {{ project.name }} on OSX_Metal_{{ testplatform.name }} on version {{ editor.version }}
   agent:
@@ -87,13 +71,9 @@ linux_apis:
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" -r ../ScriptableRenderPipeline/ bokken@$BOKKEN_DEVICE_IP:~/ScriptableRenderPipeline
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP:~/.ssh/id_rsa_macmini
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP '/Users/bokken/Library/Python/3.7/bin/unity-downloader-cli {{ editor.cmd }} -c editor --wait --published'
-    {% if testplatform.name == "Standalone" %}
     - |
-      ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }}OSX --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildMacOSMetalLinear"  --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results --timeout=1200'
-    {% else %}
-    - |
-      ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }} --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results'
-    {% endif %}
+      ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }}OSX  --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results --timeout=1200'
+
       UTR_RESULT=$?
       mkdir -p TestProjects/{{ project.folder }}/test-results/
       scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" -r bokken@$BOKKEN_DEVICE_IP:/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results/ TestProjects/{{ project.folder }}/test-results/
@@ -103,44 +83,30 @@ linux_apis:
     logs:
       paths:
         - "**/test-results/**"
-{% endif %}
 {% endfor %}
-
-<<<<<<< HEAD
+{% elsif platform.name == "Linux_Vulkan" %}
 {% for testplatform in testplatforms %}
-{% for linux_api in linux_apis %}
-# Separate block for linux, because the linux agents currently need extra configuration
-{{ project.name }}_Linux_{{ testplatform.name }}_{{ linux_api.name }}_{{ editor.version }}:
-  name : Build and Test {{ project.name }} on Linux_{{ testplatform.name }}_{{ linux_api.name }} on version {{ editor.version }}
+{{ project.name }}_Linux_Vulkan_{{ testplatform.name }}_{{ editor.version }}:
+  name : {{ project.name }} on Linux_Vulkan_{{ testplatform.name }} on version {{ editor.version }}
   agent:
-    {% if testplatform.name == "editmode" %}
-    type: Unity::VM
-    {% else %}
-    type: Unity::VM::GPU
-    {% endif %} 
-    image: cds-ops/ubuntu-18.04-base:latest
-    flavor: b1.large
+    type: {{ platform.type }}
+    image: {{ platform.image }}      
+    flavor: {{ platform.flavor }}
   commands:
     - sudo -H pip install --upgrade pip
     - sudo -H pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
     - sudo npm install upm-ci-utils@stable -g --registry https://api.bintray.com/npm/unity/unity-npm
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     - cd TestProjects/{{ project.folder }} && sudo unity-downloader-cli -b {{ editor.version }} -c editor --wait --published
-    {% if testplatform.name == "Standalone" %}
-    - cd TestProjects/{{ project.folder }} && DISPLAY=:0.0 utr/utr {{ testplatform.args }}Linux64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildLinux{{ linux_api.name }}Linear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
-    {% else %}
-    - cd TestProjects/{{ project.folder }} && DISPLAY=:0.0 utr/utr --extra-editor-arg="{{ linux_api.cmd }}"  {{ testplatform.args }} --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
-    {% endif %}
+    - cd TestProjects/{{ project.folder }} && DISPLAY=:0.0 utr/utr {{ testplatform.args }}Linux64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildLinuxVulkanLinear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
+
   artifacts:
     logs:
       paths:
-        - "**/test-results/**/*"  
-{% endfor %}   
-=======
- 
+        - "**/test-results/**"
+{% endfor %}
 {% endif %}
 {% endfor %}
->>>>>>> 379ec4b8e7b393c546d35b0ec2d3f2c62b03ec23
 {% endfor %}
 
 All_{{ project.name }}:
