--- a/.yamato/upm-ci-universal.yml
+++ b/.yamato/upm-ci-universal.yml
@@ -164,10 +164,9 @@ linux_apis:
 {% endfor %}   
 {% endfor %}
 
-All_{{ project.name }}:
-  name: All {{ project.name }} CI
+All_{{ project.name }}_{{ editor.version }}:
+  name: All {{ project.name }} CI - {{ editor.version }}
   agent:
-    name: whatever
     type: Unity::VM
     image: cds-ops/ubuntu-18.04-agent:latest
     flavor: b1.small
@@ -177,26 +176,30 @@ All_{{ project.name }}:
   {% for platform in platforms %}
   {% for testplatform in testplatforms %}
   {% if platform.name == "OSX_OpenGLCore" %}
-  
+
   {% if testplatform.name == "editmode" %}
     - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endif %}
   
+  {% elsif platform.name == "Linux" %}
+  #skip
+  
   {% elsif platform.name == "OSX_Metal"  and testplatform.name == "editmode" %}
   
+
   {% elsif platform.name == "Windows64" %}
   {% for win_api in win_apis %}
   {% if win_api.name == "Vulkan" %}
   #skip
   {% else %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ win_api.name }}_{{ editor.version }}
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ win_api.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endif %}
   {% endfor %}
 
   {% else %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}  
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endif %}
-    
+
   {% endfor %}
   {% endfor %}
 
