Use correct branch sur test
# Conflicts:
#	.yamato/upm-ci-hdrp.yml
#	.yamato/upm-ci-hdrp_standalone.yml
#	.yamato/upm-ci-shadergraph.yml
#	.yamato/upm-ci-universal.yml
#	.yamato/upm-ci-universal_stereo.yml
#	.yamato/upm-ci-vfx_lwrp.yml
#	.yamato/upm-ci-vfxmain.yml

--- a/.yamato/upm-ci-abv.yml
+++ b/.yamato/upm-ci-abv.yml
@@ -1,6 +1,5 @@
 editors:
-  - version: trunk
-  - version: fast-trunk
+  - version: graphics/vfx/feature/compile-on-import
 projects:
   - name: Universal
     folder: UniversalGraphicsTest
