--- a/.yamato/upm-ci-vfxmain.yml
+++ b/.yamato/upm-ci-vfxmain.yml
@@ -1,8 +1,8 @@
 editors:
-  - version: trunk
-    cmd: -u trunk
+  - version: graphics/vfx/feature/compile-on-import
+    cmd: -u graphics/vfx/feature/compile-on-import
   - version: fast-trunk
-    cmd: -u trunk --fast
+    cmd: -u graphics/vfx/feature/compile-on-import --fast
 platforms:
   - name: Windows64
     type: Unity::VM::GPU
@@ -187,5 +187,4 @@ All_{{ project.name }}_{{ editor.version }}:
   {% endfor %}
   {% endfor %}
 
-{% endfor %}
-{% endfor %}
+{% endfor %}    
