--- a/.yamato/upm-ci-hdrp.yml
+++ b/.yamato/upm-ci-hdrp.yml
@@ -1,8 +1,8 @@
 editors:
-  - version: trunk
-    cmd: -u trunk
+  - version: graphics/vfx/feature/compile-on-import
+    cmd: -u graphics/vfx/feature/compile-on-import
   - version: fast-trunk
-    cmd: -u trunk --fast
+    cmd: -u graphics/vfx/feature/compile-on-import --fast
 platforms:
   - name: Windows64
     type: Unity::VM::GPU
