--- a/.yamato/upm-ci-postprocessing.yml
+++ b/.yamato/upm-ci-postprocessing.yml
@@ -1,5 +1,5 @@
 editors:
-  - version: trunk
+  - version: graphics/vfx/feature/compile-on-import
 platforms:
   - name: Windows64
     type: Unity::VM::GPU
