--- a/.yamato/upm-ci-shadergraph.yml
+++ b/.yamato/upm-ci-shadergraph.yml
@@ -1,8 +1,8 @@
 editors:
-  - version: trunk
-    cmd: -u trunk
+  - version: graphics/vfx/feature/compile-on-import
+    cmd: -u graphics/vfx/feature/compile-on-import
   - version: fast-trunk
-    cmd: -u trunk --fast
+    cmd: -u graphics/vfx/feature/compile-on-import --fast
 platforms:
   - name: Windows64
     type: Unity::VM::GPU
@@ -67,7 +67,7 @@ linux_apis:
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
     - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmd }} -c editor --wait --published    
-
+    
     {% if testplatform.name == "Standalone" %}
     - cd TestProjects/{{ project.folder }} && utr\utr {{ testplatform.args }}Windows64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildWindows{{ win_api.name }}Linear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200
     {% else %}
@@ -77,7 +77,7 @@ linux_apis:
     logs:
       paths:
         - "**/test-results/**"
-{% endfor %}    
+{% endfor %}
 {% endfor %}
 
 {% elsif platform.name == "OSX_OpenGLCore" %}
@@ -94,7 +94,7 @@ linux_apis:
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
     - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmd }} -c editor --wait --published
-    
+
     {% if testplatform.name == "Standalone" %}
     - cd TestProjects/{{ project.folder }} && utr/utr {{ testplatform.args }}OSX --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200
     {% else %}
@@ -104,7 +104,7 @@ linux_apis:
     logs:
       paths:
         - "**/test-results/**"
-{% endfor %}
+{% endfor %}    
 
 {% elsif platform.name == "OSX_Metal" %}
 
