fix yamato merge /\!\

--- a/.yamato/upm-ci-abv.yml
+++ b/.yamato/upm-ci-abv.yml
@@ -23,7 +23,6 @@ projects:
 all_project_ci:
   name: ABV for SRP repository
   agent:
-    name: whatever
     type: Unity::VM
     image: cds-ops/ubuntu-18.04-agent:latest
     flavor: b1.small
@@ -31,7 +30,8 @@ all_project_ci:
   - dir
   dependencies:
   {% for project in projects %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#All_{{ project.name }}
+    - path: .yamato/upm-ci-{{ project.name | downcase }}.yml#All_{{ project.name }}
+      rerun: always
   {% endfor %}
   triggers:
     recurring:
