--- a/.yamato/upm-ci-hdrp.yml
+++ b/.yamato/upm-ci-hdrp.yml
@@ -1,5 +1,8 @@
 editors:
   - version: trunk
+    cmd: -u trunk
+  - version: fast-trunk
+    cmd: -u trunk --fast
 platforms:
   - name: Windows64
     type: Unity::VM::GPU
@@ -19,9 +22,6 @@ testplatforms:
 projects:
   - name: HDRP
     folder: HDRP_Tests
-# - name: HDRP_DebugCrossFade_Tests
-#   folder: HDRP_DebugCrossFade_Tests
-#   packagename: none
 win_apis:
   - name: DX11
     cmd: -force-d3d11
@@ -33,30 +33,32 @@ mac_apis:
 ---
 {% for project in projects %}
 {% for editor in editors %}
+{% for platform in platforms %}
 
+{% if platform.name == "Windows64" %}
 
 {% for testplatform in testplatforms %}
 {% for win_api in win_apis %}
-{{ project.name }}_Windows64_{{ testplatform.name }}_{{ win_api.name }}_{{ editor.version }}:
-  name : Build and Test {{ project.name }} on Windows64_{{ testplatform.name }}_{{ win_api.name }} on version {{ editor.version }}
+{{ project.name }}_Windows64_{{ win_api.name }}_{{ testplatform.name }}_{{ editor.version }}:
+  name : {{ project.name }} on Windows64_{{ win_api.name }}_{{ testplatform.name }} on version {{ editor.version }}
   agent:
     {% if testplatform.name == "editmode" %}
     type: Unity::VM
     {% else %}
-    type: Unity::VM::GPU
+    type: {{ platform.type }}
     {% endif %} 
-    image: sdet/gamecode_win10:stable      
-    flavor: b1.large
+    image: {{ platform.image }}      
+    flavor: {{ platform.flavor }}
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
-    - cd TestProjects/{{ project.folder }} && unity-downloader-cli -b {{ editor.version }} -c editor --wait --published    
+    - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmd }} -c editor --wait --published    
 
     {% if testplatform.name == "Standalone" %}
-    - cd TestProjects/{{ project.folder }} && powershell -command "utr/utr {{ testplatform.args }}Windows64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildWindows{{ win_api.name }}Linear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200"
+    - cd TestProjects/{{ project.folder }} && utr\utr {{ testplatform.args }}Windows64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildWindows{{ win_api.name }}Linear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200
     {% else %}
-    - cd TestProjects/{{ project.folder }} && powershell -command "utr/utr {{ testplatform.args }} --extra-editor-arg="{{ win_api.cmd }}" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results"
+    - cd TestProjects/{{ project.folder }} && utr\utr {{ testplatform.args }} --extra-editor-arg="{{ win_api.cmd }}" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
     {% endif %}
   artifacts:
     logs:
@@ -65,24 +67,25 @@ mac_apis:
 {% endfor %}    
 {% endfor %}
 
+{% elsif platform.name == "OSX_Metal" %}
 
 {% for testplatform in testplatforms %}
 {% if testplatform.name == "editmode" %}
 #skip because we don't need a GPU to run editmode tests
 {% else %}
 {{ project.name }}_OSX_Metal_{{ testplatform.name }}_{{ editor.version }}:
-  name : Build and Test {{ project.name }} on OSX_Metal_{{ testplatform.name }} on version {{ editor.version }}
+  name : {{ project.name }} on OSX_Metal_{{ testplatform.name }} on version {{ editor.version }}
   agent:
-    type: Unity::metal::macmini
-    image: slough-ops/macos-10.14-xcode
-    flavor: m1.mac
+    type: {{ platform.type }}
+    image: {{ platform.image }}      
+    flavor: {{ platform.flavor }}
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP "bash -lc 'pip3 install --user unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple'"
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" -r ../ScriptableRenderPipeline/ bokken@$BOKKEN_DEVICE_IP:~/ScriptableRenderPipeline
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP:~/.ssh/id_rsa_macmini
-    - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP '/Users/bokken/Library/Python/3.7/bin/unity-downloader-cli -u {{ editor.version }} -c editor --wait --published'
+    - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP '/Users/bokken/Library/Python/3.7/bin/unity-downloader-cli {{ editor.cmd }} -c editor --wait --published'
     {% if testplatform.name == "Standalone" %}
     - |
       ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP 'cd ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }} && ~/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/utr/utr {{ testplatform.args }}OSX  --testproject=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }} --editor-location=/Users/bokken/.Editor --artifacts_path=/Users/bokken/ScriptableRenderPipeline/TestProjects/{{ project.folder }}/test-results --timeout=1200'
@@ -103,6 +106,10 @@ mac_apis:
 {% endfor %}
 
 
+{% endif %}
+{% endfor %}
+{% endfor %}
+
 All_{{ project.name }}:
   name: All {{ project.name }} CI
   agent:
@@ -118,12 +125,14 @@ All_{{ project.name }}:
   {% if platform.name == "OSX_OpenGLCore" %}
   
   {% if testplatform.name == "editmode" %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_trunk
   {% endif %}
   
   {% elsif platform.name == "OSX_Metal"  and testplatform.name == "editmode" %}
   
   {% elsif platform.name == "OSX_Metal" %}
+  #skip
+  {% elsif platform.name == "Linux" %}
   #skip
   
   {% elsif platform.name == "Windows64" %}
@@ -131,16 +140,16 @@ All_{{ project.name }}:
   {% if win_api.name == "Vulkan" %}
   #skip
   {% else %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ win_api.name }}_{{ editor.version }}
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ win_api.name }}_{{ testplatform.name }}_trunk
   {% endif %}
   {% endfor %}
 
   {% else %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}  
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_trunk 
   {% endif %}
     
   {% endfor %}
   {% endfor %}
 
-{% endfor %}    
+    
 {% endfor %}
