--- a/.yamato/upm-ci-vfxmain.yml
+++ b/.yamato/upm-ci-vfxmain.yml
@@ -1,5 +1,6 @@
 editors:
   - version: graphics/bugfix/fix-shadow-culling
+    cmd: -u graphics/bugfix/fix-shadow-culling
   - version: trunk
     cmd: -u trunk
   - version: fast-trunk
@@ -51,14 +52,14 @@ linux_apis:
     type: Unity::VM
     {% else %}
     type: {{ platform.type }}
-    {% endif %} 
-    image: {{ platform.image }}      
+    {% endif %}
+    image: {{ platform.image }}
     flavor: {{ platform.flavor }}
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
-    - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmd }} -c editor --wait --published    
+    - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmd }} -c editor --wait --published
 
     {% if testplatform.name == "Standalone" %}
     - cd TestProjects/{{ project.folder }} && utr\utr {{ testplatform.args }}Windows64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildWindows{{ win_api.name }}Linear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200
@@ -69,7 +70,7 @@ linux_apis:
     logs:
       paths:
         - "**/test-results/**"
-{% endfor %}    
+{% endfor %}
 {% endfor %}
 
 {% elsif platform.name == "OSX_Metal" %}
@@ -82,11 +83,11 @@ linux_apis:
   name : {{ project.name }} on OSX_Metal_{{ testplatform.name }} on version {{ editor.version }}
   agent:
     type: {{ platform.type }}
-    image: {{ platform.image }}      
+    image: {{ platform.image }}
     flavor: {{ platform.flavor }}
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
-    
+
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP "bash -lc 'pip3 install --user unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple'"
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" -r ../ScriptableRenderPipeline/ bokken@$BOKKEN_DEVICE_IP:~/ScriptableRenderPipeline
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP:~/.ssh/id_rsa_macmini
@@ -122,8 +123,8 @@ linux_apis:
     type: Unity::VM
     {% else %}
     type: {{ platform.type }}
-    {% endif %} 
-    image: {{ platform.image }}      
+    {% endif %}
+    image: {{ platform.image }}
     flavor: {{ platform.flavor }}
   commands:
     - sudo -H pip install --upgrade pip
@@ -139,8 +140,8 @@ linux_apis:
   artifacts:
     logs:
       paths:
-        - "**/test-results/**/*"  
-{% endfor %}   
+        - "**/test-results/**/*"
+{% endfor %}
 {% endfor %}
 
 
@@ -160,18 +161,18 @@ All_{{ project.name }}_{{ editor.version }}:
   {% for platform in platforms %}
   {% for testplatform in testplatforms %}
   {% if platform.name == "OSX_OpenGLCore" %}
-  
+
   {% if testplatform.name == "editmode" %}
     - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endif %}
-  
+
   {% elsif platform.name == "OSX_Metal"  and testplatform.name == "editmode" %}
-  
+
   {% elsif platform.name == "OSX_Metal" %}
   #skip
   {% elsif platform.name == "Linux" %}
   #skip
-  
+
   {% elsif platform.name == "Windows64" %}
   {% for win_api in win_apis %}
   {% if win_api.name == "Vulkan" %}
@@ -182,9 +183,9 @@ All_{{ project.name }}_{{ editor.version }}:
   {% endfor %}
 
   {% else %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}  
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endif %}
-    
+
   {% endfor %}
   {% endfor %}
 
