Testing with trunk branch lighting/lighting-settings-asset-take2

--- a/.yamato/upm-ci-hdrp.yml
+++ b/.yamato/upm-ci-hdrp.yml
@@ -1,5 +1,8 @@
 editors:
+  - version: lighting/lighting-settings-asset-take2
+    cmd: -u lighting/lighting-settings-asset-take2
   - version: trunk
+    cmd: -u trunk
 platforms:
   - name: Windows64
     type: Unity::VM::GPU
