Testing with trunk branch lighting/lighting-settings-asset-take2

--- a/.yamato/upm-ci-hdrp.yml
+++ b/.yamato/upm-ci-hdrp.yml
@@ -1,4 +1,6 @@
 editors:
+  - version: lighting/lighting-settings-asset-take2
+    cmd: -u lighting/lighting-settings-asset-take2
   - version: trunk
     cmd: -u trunk
   - version: fast-trunk
